# llama-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1
.github/workflows/: ci.yml
benches/: speed.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONCEPT.md  DEVELOPMENT.md  GITHUB_SETUP.md  NEXT_STEPS.md  PLAN.md  SIZING.md
src/: error.rs  lib.rs  main.rs  metrics.rs
src/safe/: backend.rs  context.rs  embed.rs  generate.rs  mod.rs  model.rs
tests/: integration.rs
