[package]
name = "llama_rs"
version = "0.1.0"
edition = "2021"
description = "Ultra-fast and safe Rust wrapper around llama.cpp"
license = "MIT"
readme = "README.md"
repository = ""

[features]
default = []
metrics = []

[lib]
name = "llama_rs"
path = "src/lib.rs"

[[bin]]
name = "llama_rs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1", features = ["sampler"] }
thiserror = "2.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bench]]
name = "speed"
harness = false
